--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
         environment:
             POSTGRES_PASSWORD: postgres
             POSTGRES_USER: postgres
-            POSTGRES_DB: api-de-autentatica-o-multi-app_db_1
+            POSTGRES_DB: authdb
         volumes:
             - ./pgdata:/var/lib/postgresql/data
         ports:
             - "5432:5432"
     app:
-        container_name: api-de-autentatica-o-multi-app_db_1
+        container_name: authenticator
         restart: always
         build: .
         ports:
