--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         environment:
             POSTGRES_PASSWORD: postgres
             POSTGRES_USER: postgres
-            POSTGRES_DB: authdb
+            POSTGRES_DB: authenticator
         volumes:
             - ./pgdata:/var/lib/postgresql/data
         ports:
@@ -15,6 +15,6 @@ services:
         restart: always
         build: .
         ports:
-            - "3000:3000"
+            - "5432:5432"
         depends_on:
             - db
